Update README, fix spacing, add styles

--- a/styles/base.css
+++ b/styles/base.css
@@ -9,12 +9,16 @@ body {
 }
 
 header {
-    background-color: lightgray;
+    background-color:aqua;
     font-size: 1.5em;
     font-weight: bold;
     padding: 1em;
     margin-bottom: 1em;
     text-align: center;
+}
+
+#button-top {
+    margin-top: 35px;
 }
 
 footer {
@@ -24,12 +28,6 @@ footer {
     padding: 1em;
     text-align: center;
 }
-
-/* ADDITIONAL STYLING */
-/* input, label {
-    display:block;
-    font-size: 16px;
-} */
 
 #username, #username-validated {
     width: 30%;
